# kept

./: .env.example  .gitignore  .npmrc  AGENT.md  BACKLOG.md  Cargo.toml  DESIGN.md  KANBAN.md  LEARNINGS.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/kept-core/: Cargo.toml
crates/kept-core/src/: db.rs  gmail.rs  jobs.rs  keychain.rs  lib.rs
crates/kept-dispatch/: Cargo.toml
crates/kept-dispatch/resources/: com.kept.dispatch.plist
crates/kept-dispatch/src/: main.rs
design/: toolbar-v1.html  toolbar-v2.html  toolbar-v3.html
designs/: thread-actions-variant-a.html  thread-actions-variant-b.html  thread-actions-variant-c.html
docs/: ARCHITECTURE.md  CODE_SIGNING.md  PROVIDER_ARCHITECTURE.md  architecture.md  attachments.md  byo-ai.md  gmail-ingestion.md  ios-build.md  kpt-collapsible-search-bar-handoff.md  local-mail-repository.md  mvp-demo.md  privacy-model.md  storage-search.md  testing-strategy.md  thread-actions.md
e2e/: seed.sql  seed.ts  vite-plugin-sqlite-proxy.ts
e2e-tests/: attachments.spec.ts  avatar-quotes-regression.spec.ts  count-bubble.spec.ts  features.spec.ts  journeys.spec.ts  scheduled-jobs.spec.ts  search.spec.ts  smart-folders.spec.ts  smoke.spec.ts  star-reactivity.spec.ts  thread-actions.spec.ts  triage-view.spec.ts  ui-design-system.spec.ts  ui-layout.spec.ts  view-aware-actions-functional.spec.ts  view-aware-actions.spec.ts  view-switching.spec.ts
mockups/: draft-animation-A-shrink-fly.html  superhuman-unified-inbox.html
plans/: multi-account-unified-inbox.md
screenshots/: review.html
scripts/: capture-real-mail-state-matrix.mjs  check-tauri-scaffold.mjs  requirements-scrape.txt  scrape-ux-docs.py
src/: accountContext.ts  actions.ts  auth.ts  authProvider.ts  authProviderRegistry.ts  autoLabels.ts  autoLabelsSettings.ts  avatar.ts  bulk.ts  commandPalette.ts  compose.ts  contextMenu.ts  db-browser.ts  db.ts  followupReminders.ts  gmail.ts  helpers.ts  icons.ts  index.tsx  inlineReply.ts  keyboard.ts  keychain.ts  localDrafts.ts  main.ts  newSenders.ts  notifications.ts  prioritySenders.ts  provider.ts  providerFor.ts  providerRegistry.ts  resizeHandle.ts  sanitize.ts  scheduledJobs.ts  scheduledJobsDb.ts  scheduledSend.ts  search.ts  senderPhotos.ts  settings.ts  smartFolderDb.ts  smartFolders.ts  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: accountContext.test.ts  attachments.test.ts  authProvider.test.ts  authProviderRegistry.test.ts  autoLabels.test.ts  avatar.test.ts  compose.test.ts  countDisplay.test.ts  fetchMessageBodyE2E.test.ts  followupReminders.test.ts  followupRemindersIntegration.test.ts  followupRemindersUI.test.ts  keyboardNavigation.test.ts  mockProvider.test.ts  multiAccountAuth.test.ts  prioritySenders.test.ts  provider.test.ts  providerRegistry.test.ts  replyFrom.test.ts  sanitize.test.ts  scheduledJobActions.test.ts  scheduledJobs.test.ts  scheduledJobsDb.test.ts  search.test.ts  serverSearch.test.ts  setAside.test.ts  setup.ts  smartFolderDb.test.ts  smartFolderStore.test.ts  smartFolders.test.ts  sparkToolbar.test.ts  staggerSync.test.ts  store.test.ts  stressRender.test.ts  threadActions.test.ts  threadList.test.ts  triageMode.test.ts  (+5 more)
(+179 files in other folders)
