[workspace]
members = ["src-tauri", "crates/kept-core", "crates/kept-dispatch"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1"
chrono = "0.4"
