[package]
name = "kept"
version = "0.1.0"
description = "Kept — minimal local-first email client"
authors = ["you"]
edition = "2021"

[lib]
name = "kept_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-oauth = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-pilot = "0.7"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-keyring = "0.1.0"


