[package]
name = "kept-core"
version = "0.1.0"
edition = "2021"
description = "Shared core: DB access, keychain, Gmail send for Kept"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
keyring = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
