[package]
name = "kept-dispatch"
version = "0.1.0"
edition = "2021"
description = "Background send sidecar for Kept — fired by OS scheduler"

[dependencies]
kept-core = { path = "../kept-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
