[package]
name = "kept-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
open = "5"
url = "2"
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
